--- a/apps/users/templates/employee.html
+++ b/apps/users/templates/employee.html
@@ -29,8 +29,8 @@
                                   <div class="am-form-group">
                                         <label for="doc-ipt-3" class="am-u-sm-2 am-form-label">生日</label>
                                         <div class="am-u-sm-10">
-                                            <input type="text" name="birthday" class="am-form-field" data-am-datepicker="{format: 'yyyy-mm-dd'}" value="{{ request.user.user_employee.birthday }}" placeholder="日历组件" id="doc-datepicker" data-am-datepicker readonly required>
-{#                                        <input type="text" name="birthday" class="am-form-field" value="{{ request.user.user_employee.birthday }}" id="doc-datepicker">#}
+                                            <input type="date" name="birthday" class="am-form-field" data-am-datepicker="{format: 'yyyy-mm-dd'}" value="{{ request.user.user_employee.birthday|date:'Y-m-d' }}" placeholder="日历组件" id="doc-datepicker" data-am-datepicker readonly required>
+{#                                        <input type="text" name="birthday" class="am-form-field" value="{{ request.user.user_employee.birthday|date:'Y-m-d' }}" id="doc-datepicker">#}
                                         </div>
                                       </div>
                           <div class="am-form-group">
@@ -96,7 +96,12 @@
             });
             $('#file-list').html(fileNames);
           });
-        
+
+
+
+
+
+
         });
 
       </script>
