--- a/apps/upforms/templates/uploadform.html
+++ b/apps/upforms/templates/uploadform.html
@@ -6,29 +6,12 @@
 <div class="am-g am-g-fixed am-margin-top">
 
 
-<form action="/polls/" method="POST" role="form" class="am-form am-form-horizontal">
-  <legend>故障提交</legend>
+<form action="{% url 'pr:upform' %}" method="POST" role="form" class="am-form am-form-horizontal">
+  <legend><p class="am-kai">尊敬的{{ user.user_employee.name }}，您好：</p>
+      <p class="am-kai">&emsp;&emsp;&emsp;&emsp;请核对您的信息：您的联系方式是{{ user.user_employee.moblie }},我们将尽快处理您的打印机故障。</p>
 
-  <div class="am-form-group">
-    <label for="" class="am-u-md-2 am-form-label">姓名</label>
-    <div class="am-u-md-10">
-    <input type="text" name="repair_man" id="" placeholder="输入你的姓名">
-    </div>
-  </div>
+  </legend>
 
-  <div class="am-form-group">
-    <label for="" class="am-u-md-2 am-form-label am-text-right">单位</label>
-    <div class="am-u-md-10">
-      <input type="text" name="unit" id="" placeholder="输入你所在的单位">
-    </div>
-  </div>
-
-  <div class="am-form-group">
-    <label for="" class="am-u-md-2 am-form-label am-text-right">联系电话</label>
-    <div class="am-u-md-10">
-      <input type="tel" name="telephone" id="" placeholder="输入你的联系电话">
-    </div>
-  </div>
 
   <div class="am-form-group">
     <label for="doc-ta-1" class="am-u-md-2 am-text-right">故障描述</label>
@@ -37,6 +20,7 @@
     </div>
   </div>
     <input type="hidden" name="pub_date" id="">
+    <input type="hidden" name="repair_man" id="">
   <div class="am-form-group">
     <div class="am-u-md-offset-2 am-u-md-10">
       <button type="submit" class="am-btn am-btn-primary">提交</button>
