--- a/apps/upforms/templates/uploadform.html
+++ b/apps/upforms/templates/uploadform.html
@@ -3,36 +3,62 @@
 {% load staticfiles %}
 
 {% block content %}
-<div class="am-g am-g-fixed am-margin-top">
+    <div class="am-g am-g-fixed am-margin-top">
 
 
-<form action="{% url 'pr:upform' %}" method="POST" role="form" class="am-form am-form-horizontal">
-  <legend><p class="am-kai">尊敬的{{ user.user_employee.name }}，您好：</p>
-      <p class="am-kai">&emsp;&emsp;&emsp;&emsp;请核对您的信息：您的联系电话是{{ user.user_employee.moblie }},我们将尽快处理您的打印机故障。</p>
+        <form action="{% url 'pr:upform' %}" method="POST" role="form" class="am-form am-form-horizontal">
+            <legend><p class="am-kai">尊敬的{{ user.user_employee.name }}，您好：</p>
+                <p class="am-kai">
+                    &emsp;&emsp;&emsp;&emsp;请核对您的信息：您的联系电话是{{ user.user_employee.moblie }},您要维修的打印机是<label id="info"></label>我们将尽快处理您的打印机故障。</p>
 
-  </legend>
+            </legend>
 
 
-  <div class="am-form-group">
-    <label for="doc-ta-1" class="am-u-md-2 am-text-right">故障描述</label>
-    <div class="am-u-md-10">
-    <textarea  rows="5" name="content" id="doc-ta-1"></textarea>
+            <div class="am-form-group">
+                <label for="doc-ta-1" class="am-u-md-2 am-text-right">故障描述</label>
+                <div class="am-u-md-10">
+                    <textarea rows="5" name="content" id="doc-ta-1"></textarea>
+                </div>
+            </div>
+            <input type="hidden" name="pub_date" id="">
+            <input type="hidden" name="repair_man" id="">
+            <div class="am-form-group">
+                <label for="doc-select-1" class="am-u-sm-2 am-form-label">报修打印机</label>
+                <div class="am-u-sm-10">
+                    <select id="prselect" name="prints">
+                        {% for pr in user.user_printer.all %}
+                            <option value="{{ pr }}">{{ pr.get_type_display }}</option>
+                        {% endfor %}
+
+                    </select>
+                </div>
+
+<br/><br/>
+                <div class="am-form-group">
+                    <div class="am-u-md-offset-2 am-u-md-10">
+                        <button type="submit" class="am-btn am-btn-primary">提交</button>
+                    </div>
+                </div>
+                {% csrf_token %}
+            </div>
+        </form>
+
     </div>
-  </div>
-    <input type="hidden" name="pub_date" id="">
-    <input type="hidden" name="repair_man" id="">
-<ul>
-{% for pr in user.user_printer.all %}
-<li>{{ pr.type }}</li>
-{% endfor %}
-</ul>
-  <div class="am-form-group">
-    <div class="am-u-md-offset-2 am-u-md-10">
-      <button type="submit" class="am-btn am-btn-primary">提交</button>
-    </div>
-  </div>
-    {% csrf_token %}
-</form>
+{% endblock %}
 
-</div>
+{% block custom_js %}
+      <script type="text/javascript">
+
+    $(function () {
+      bindSelect();
+      $('#info').text($('#prselect').val());
+    });
+    bindSelect = function () {
+      var $prSelect = $('#prselect');
+      $prSelect.change(function () {
+        {#$('#info').text($(this).val());#}
+        $('#info').text($(this).find("option:selected").text());
+      });
+    }
+  </script>
 {% endblock %}
