--- a/templates/base.html
+++ b/templates/base.html
@@ -47,9 +47,9 @@
 
   <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
     <ul class="am-nav am-nav-pills am-topbar-nav">
-      <li class="am-active"><a href="{% url 'index' %}">首页</a></li>
+      <li class="am-active"><a href="{% url 'pr:formlist' %}">首页</a></li>
       <li><a href="{% url 'pr:upform' %}">报修申请</a></li>
-        <li><a href="/polls/">个人查询</a></li>
+        <li><a href="">个人查询</a></li>
         <li><a href="{% url 'users:employee' %}">信息维护</a></li>
     </ul>
 
