--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 {% block title %}首页{% endblock %}
 {% load staticfiles %}
 {% block content %}
-
-    <h1>维修量展示</h1>
+<div class="am-g am-g-fixed am-margin-top">
+    <h1>如有好的问题或建议，请拨打7658277</h1>
+</div>
 {% endblock %}
