--- a/templates/base.html
+++ b/templates/base.html
@@ -2,89 +2,94 @@
 <html class="no-js">
 {% load staticfiles %}
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1">
-  <title>{% block title %}首页{% endblock %}</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1">
+    <title>{% block title %}首页{% endblock %}</title>
 
-  <!-- Set render engine for 360 browser -->
-  <meta name="renderer" content="webkit">
+    <!-- Set render engine for 360 browser -->
+    <meta name="renderer" content="webkit">
 
-  <!-- No Baidu Siteapp-->
-  <meta http-equiv="Cache-Control" content="no-siteapp"/>
+    <!-- No Baidu Siteapp-->
+    <meta http-equiv="Cache-Control" content="no-siteapp"/>
 
-  <link rel="icon" type="image/png" href="{% static 'i/favicon.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'i/favicon.png' %}">
 
-  <!-- Add to homescreen for Chrome on Android -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <link rel="icon" sizes="192x192" href="{% static 'i/app-icon72x72@2x.png' %}">
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="icon" sizes="192x192" href="{% static 'i/app-icon72x72@2x.png' %}">
 
-  <!-- Add to homescreen for Safari on iOS -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Amaze UI"/>
-  <link rel="apple-touch-icon-precomposed" href="{% static 'i/app-icon72x72@2x.png' %}">
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Amaze UI"/>
+    <link rel="apple-touch-icon-precomposed" href="{% static 'i/app-icon72x72@2x.png' %}">
 
-  <!-- Tile icon for Win8 (144x144 + tile color) -->
-  <meta name="msapplication-TileImage" content="{% static 'i/app-icon72x72@2x.png' %}">
-  <meta name="msapplication-TileColor" content="#0e90d2">
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="{% static 'i/app-icon72x72@2x.png' %}">
+    <meta name="msapplication-TileColor" content="#0e90d2">
 
-  <link rel="stylesheet" href="{% static 'css/amazeui.min.css' %}">
-  <link rel="stylesheet" href="{% static 'css/app.css' %}">
+    <link rel="stylesheet" href="{% static 'css/amazeui.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/app.css' %}">
     {% block custom_css %}{% endblock %}
 </head>
 <body>
 <div class="am-g am-g-fixed am-margin-top">
-<header class="am-topbar am-topbar-inverse">
-  <h1 class="am-topbar-brand">
-    <a href="#">打印机维修系统</a>
-  </h1>
+    <header class="am-topbar am-topbar-inverse">
+        <h1 class="am-topbar-brand">
+            <a href="#">打印机维修系统</a>
+        </h1>
 
-  <button class="am-topbar-btn am-topbar-toggle am-btn am-btn-sm am-btn-success am-show-sm-only" data-am-collapse="{target: '#doc-topbar-collapse'}"><span class="am-sr-only">导航切换</span> <span class="am-icon-bars"></span></button>
+        <button class="am-topbar-btn am-topbar-toggle am-btn am-btn-sm am-btn-success am-show-sm-only"
+                data-am-collapse="{target: '#doc-topbar-collapse'}"><span class="am-sr-only">导航切换</span> <span
+                class="am-icon-bars"></span></button>
 
-  <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
-    <ul class="am-nav am-nav-pills am-topbar-nav">
-      <li class="am-active"><a href="{% url 'pr:formlist' %}">首页</a></li>
-      <li><a href="{% url 'pr:upform' %}">报修申请</a></li>
-        <li><a href="">个人查询</a></li>
-        <li><a href="{% url 'users:employee' %}">信息维护</a></li>
-    </ul>
+        <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
+            <ul class="am-nav am-nav-pills am-topbar-nav">
+                <li class="am-active"><a href="{% url 'pr:formlist' %}">首页</a></li>
+                <li><a href="{% url 'pr:upform' %}">报修申请</a></li>
+                <li><a href="{% url 'users:employee' %}">信息维护</a></li>
+            </ul>
 
-    <form class="am-topbar-form am-topbar-left am-form-inline" role="search">
-      <div class="am-form-group am-input-group am-input-group-primary">
-        <input type="text" class="am-form-field am-input-sm" id="search_keywords" placeholder="搜索">
-          <span class="am-input-group-btn">
-        <button class="am-btn am-btn-primary" type="button" id="jsSearchBtn"><span class="am-icon-search"></span></button>
-      </span>
-      </div>
-    </form>
-{% if request.user.is_authenticated %}
+            <form class="am-topbar-form am-topbar-left am-form-inline" role="search">
+                <div class="am-form-group am-input-group am-input-group-primary">
+                    <input type="text" class="am-form-field am-input-sm" id="search_keywords" placeholder="搜索">
+                    <span class="am-input-group-btn"><button class="am-btn am-btn-primary" type="button"
+                                                             id="jsSearchBtn"><span
+                            class="am-icon-search"></span></button></span>
+                </div>
+            </form>
+            {% if request.user.is_authenticated %}
 
-                 <div class="am-topbar-right">
-      <button class="am-btn am-btn-primary am-topbar-btn am-btn-sm"><a href="{% url 'users:logout' %}">登出</a></button>
-    </div>
+                <div class="am-topbar-right">
+                    <button class="am-btn am-btn-primary am-topbar-btn am-btn-sm"><a
+                            href="{% url 'users:logout' %}">登出</a></button>
+                </div>
 
-    <div class="am-topbar-right">
-      <button class="am-btn am-btn-primary am-topbar-btn am-btn-sm"><a href="{% url 'login' %}">欢迎你，{{ user.user_employee.name }}</a></button>
-    </div>
+                <div class="am-topbar-right">
+                    <button class="am-btn am-btn-primary am-topbar-btn am-btn-sm"><a
+                            href="{% url 'login' %}">欢迎你，{{ user.user_employee.name }}</a></button>
+                </div>
 
 
-{% else %}
+            {% else %}
 
-       <div class="am-topbar-right">
-      <button class="am-btn am-btn-primary am-topbar-btn am-btn-sm"><a href="{% url 'login' %}">注册</a></button>
-    </div>
+                <div class="am-topbar-right">
+                    <button class="am-btn am-btn-primary am-topbar-btn am-btn-sm"><a href="{% url 'login' %}">注册</a>
+                    </button>
+                </div>
 
-    <div class="am-topbar-right">
-      <button class="am-btn am-btn-primary am-topbar-btn am-btn-sm"><a href="{% url 'login' %}">登录</a></button>
-    </div>
+                <div class="am-topbar-right">
+                    <button class="am-btn am-btn-primary am-topbar-btn am-btn-sm"><a href="{% url 'login' %}">登录</a>
+                    </button>
+                </div>
 
-{% endif %}
-  </div>
-</header>
+            {% endif %}
+        </div>
+    </header>
 </div>
 {% block content %}{% endblock %}
 <!--在这里编写你的代码-->
@@ -99,7 +104,7 @@
 <script src="{% static 'js/amazeui.ie8polyfill.min.js' %}"></script>
 <![endif]-->
 <script src="{% static 'js/amazeui.min.js' %}"></script>
-<script src="{% static 'js/mysearch.js' %}"  type="text/javascript"></script>
+<script src="{% static 'js/mysearch.js' %}" type="text/javascript"></script>
 {% block custom_js %}{% endblock %}
 </body>
 </html>
