需要添加修改密码、下拉框选择提交故障打印机处的错误页面还未处理

--- a/apps/upforms/templates/uploadform.html
+++ b/apps/upforms/templates/uploadform.html
@@ -27,7 +27,7 @@
                 <div class="am-u-sm-10">
                     <select id="prselect" name="prints">
                         {% for pr in user.user_printer.all %}
-                            <option value="{{ pr }}">{{ pr.get_type_display }}</option>
+                            <option value="{{ pr.id }}">{{ pr.get_type_display }}</option>
                         {% endfor %}
 
                     </select>
