需要添加修改密码、下拉框选择提交故障打印机处的错误页面还未处理

--- a/apps/upforms/templates/uploadform.html
+++ b/apps/upforms/templates/uploadform.html
@@ -51,7 +51,8 @@
 
     $(function () {
       bindSelect();
-      $('#info').text($('#prselect').val());
+      {#$('#info').text($('#prselect').val());#}
+      $('#info').text('<您还未选择打印机型号>');
     });
     bindSelect = function () {
       var $prSelect = $('#prselect');
