--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
             {% else %}
 
                 <div class="am-topbar-right">
-                    <button class="am-btn am-btn-primary am-topbar-btn am-btn-sm"><a href="{% url 'login' %}">注册</a>
+                    <button class="am-btn am-btn-primary am-topbar-btn am-btn-sm"><a href="{% url 'users:register' %}">注册</a>
                     </button>
                 </div>
 
