需要修稿form的前端渲染

--- a/apps/users/templates/employee.html
+++ b/apps/users/templates/employee.html
@@ -106,7 +106,7 @@
                         </tbody>
                     </table>
                         <button
-  type="button"
+  type="button" onclick="window.location.href='{% url "print:create" %}'"
   class="am-btn am-btn-success"
   id="doc-prompt-toggle">
   添加记录
