--- a/apps/users/templates/employee.html
+++ b/apps/users/templates/employee.html
@@ -96,7 +96,7 @@
                                 <td>
                                     <div class="">
                                         <a href="{% url 'print:update' print.id %}" title="redo"><i class="am-icon-edit"></i>编辑</a>
-                                        <a href="" title="edit"><i class="am-icon-trash"></i>删除</a>
+                                        <a href="{% url 'print:delete' print.id %}" title="edit"><i class="am-icon-trash"></i>删除</a>
                                     </div>
                                 </td>
 
@@ -116,23 +116,6 @@
 {#    打印机信息录入#}
 
 
-
-<div class="am-modal am-modal-prompt" tabindex="-1" id="my-prompt">
-  <div class="am-modal-dialog">
-    <div class="am-modal-hd">Amaze UI</div>
-    <div class="am-modal-bd">
-      来来来，吐槽点啥吧
-      <input type="text" class="am-modal-prompt-input">
-
-    </div>
-    <div class="am-modal-footer">
-      <span class="am-modal-btn" data-am-modal-cancel>取消</span>
-      <span class="am-modal-btn" data-am-modal-confirm>提交</span>
-    </div>
-  </div>
-</div>
-
-
 {% endblock %}
 {% block custom_js %}
     <script>
@@ -144,18 +127,6 @@
                 });
                 $('#file-list').html(fileNames);
             });
-
-            $('#doc-prompt-toggle').on('click', function() {
-    $('#my-prompt').modal({
-      relatedTarget: this,
-      onConfirm: function(e) {
-        alert('你输入的是：' + e.data || '')
-      },
-      onCancel: function(e) {
-        alert('不想说!');
-      }
-    });
-  });
 
 
         });
